crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@error-pq-dimension-not-divisible.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="error-pq-dimension-not-divisible"
description="PqDimensionNotDivisible from invalid PQ config."
dim=8 m=16 ef_construction=200 ef_search=50 metric=L2 quantization_enabled=false quantization_rescore=false
neighbor_select="default"
==== GRAPH ====
nodes=0 dim=8 entry_point=none max_layer=0
node_head=[]
==== SECTIONS ====
<none>
==== RESULT ====
error.kind=PqDimensionNotDivisible
error.induction_kind=api
error.rendered=PqDimensionNotDivisible{dim=10, m_subspaces=3}
