crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@orthogonal-basis-search-dot.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="orthogonal-basis-search-dot"
description="Dot-product search over four orthogonal basis vectors."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Dot quantization_enabled=false quantization_rescore=false
neighbor_select="default"
==== GRAPH ====
nodes=4 dim=4 entry_point=idx0 max_layer=0
node_head=[n1:L0:[3], n2:L0:[3], n3:L0:[3], n4:L0:[3]]
==== SECTIONS ====
GRPH(len=247, blake3_8=0dd633ad27d4048e, dim=4, nodes=4, entry_point=idx0, max_layer=0, head=[n1:L0:[3], n2:L0:[3], n3:L0:[3], n4:L0:[3]])
VECS(len=90, blake3_8=5bce0ee4da9b7744, dim=4, nodes=4, components=16, head=[+1.000, +0.000, +0.000, +0.000, +0.000, +1.000])
QUNT(empty)
==== RESULT ====
search.rows
  [0] n1	+1.000000
  [1] n2	+0.000000
  [2] n3	+0.000000
